# parallel-programming-openmp-nbodies

nbody/: CMakeLists.txt  lanzar.sh
nbody/apps/: CMakeLists.txt  nbodyfile.cpp  nbodyrnd.cpp
nbody/in/: example
nbody/include/: bodiesaos.h  bodiessoa.h  body.h  fileoptions.h  options.h  pvector.h  rndoptions.h  simgrid.h  simparam.h
nbody/src/: CMakeLists.txt  bodiesaos.cpp  bodiessoa.cpp  body.cpp  fileoptions.cpp  options.cpp  rndoptions.cpp  simparam.cpp
